# pulse

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
pulse/app/: app.py  config.py  main.py  metrics.py
pulse/app/api/: dependencies.py  health.py  ingest.py  routes.py  sentiment.py  stocks.py
pulse/app/db/: connection.py  engine.py  enums.py  inserts.py  models.py  repository.py
pulse/app/db/migrations/: 001_create_sentiment_tables.sql
pulse/app/ingestion/: base.py  news.py  pipeline.py  reddit.py  sec.py  stocktwits.py
pulse/app/llm/: analyze_data.py  generate_sql_query.py  prompt_template.py  sentiment_model.py  skill_map.py
pulse/app/models/: sentiment.py
pulse/app/scoring/: finbert.py  scorer.py
pulse/app/services/: aggregator.py  invocation_services.py  invoker.py
pulse/app/services/symbol_cache/: symbol_cache.py
pulse/app/services/web_scraper/: reddit_scraper.py
pulse/app/utils/: repeat_tasks.py
pulse/assets/: company_tickers.json  cryptocurrencies.json
pulse/migrations/: env.py
pulse/migrations/versions/: efdc17fbdec4_.py  efdc17fbdec4_init.py
tests/unit/database/: test_database_insertions.py
tests/unit/services/: test_symbol_cache.py
